<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.avereon.pom</groupId>
		<artifactId>mod</artifactId>
		<version>3.5.5-SNAPSHOT</version>
	</parent>

	<groupId>com.dakkra</groupId>
	<artifactId>hypersynesthesia</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<packaging>jar</packaging>

	<organization>
		<name>Dakkra Studio LLC</name>
		<url>https://hypersynesthesia.com</url>
	</organization>

	<name>HyperSynesthesia</name>
	<description>Application to generate video from audio</description>
	<inceptionYear>2023</inceptionYear>

	<repositories>
		<repository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<!-- Version numbers updated 22 Jul 2023 -->
		<xenon.version>[1.8-SNAPSHOT,)</xenon.version>
		<zerra.version>[0.10-SNAPSHOT,)</zerra.version>
		<monocle.version>21.0.2</monocle.version>
		<cameo.version>2.10</cameo.version>
		<curex.version>1.4.1</curex.version>
		<jaffree.version>2023.09.10</jaffree.version>
		<fft4j.version>2.0</fft4j.version>
		<slf4j.version>2.0.16</slf4j.version>
		<images-folder>target/main/images</images-folder>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.github.kokorin.jaffree</groupId>
			<artifactId>jaffree</artifactId>
			<version>${jaffree.version}</version>
		</dependency>

		<dependency>
			<groupId>com.tambapps.fft4j</groupId>
			<artifactId>fft4j</artifactId>
			<version>${fft4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>com.avereon</groupId>
			<artifactId>zerra</artifactId>
			<version>${zerra.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testfx</groupId>
			<artifactId>openjfx-monocle</artifactId>
			<version>${monocle.version}</version>
			<scope>test</scope>
			<exclusions>
				<!-- Exclude the openjfx libraries, they are already available -->
				<exclusion>
					<groupId>org.openjfx</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.card</exclude>
					<exclude>**/*.info</exclude>
					<exclude>**/*.properties</exclude>
					<exclude>**/*.yaml</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.card</include>
					<include>**/*.info</include>
					<include>**/*.properties</include>
					<include>**/*.yaml</include>
				</includes>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- Version comes from parent -->
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx128m --add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>testui</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<!-- Version comes from parent -->
						<executions>
							<execution>
								<id>testui</id>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
								<configuration>
									<forkCount>1</forkCount>
									<reuseForks>false</reuseForks>
									<runOrder>alphabetical</runOrder>
									<argLine>-Xmx128m --add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</argLine>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>packs</id>
			<build>
				<plugins>
					<!--					<plugin>-->
					<!--						<groupId>com.avereon</groupId>-->
					<!--						<artifactId>cameo</artifactId>-->
					<!--						<version>${cameo.version}</version>-->
					<!--						<executions>-->
					<!--							<execution>-->
					<!--								<id>render</id>-->
					<!--								<phase>prepare-package</phase>-->
					<!--								<goals>-->
					<!--									<goal>render</goal>-->
					<!--								</goals>-->
					<!--								<configuration>-->
					<!--									<images>-->
					<!--										<image>-->
					<!--											<class>com.avereon.cartesia.icon.CartesiaIcon</class>-->
					<!--											<target>${images-folder}/product.png</target>-->
					<!--											<theme>light</theme>-->
					<!--										</image>-->
					<!--									</images>-->
					<!--								</configuration>-->
					<!--							</execution>-->
					<!--						</executions>-->
					<!--					</plugin>-->

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>${maven.dependency.version}</version>
						<executions>
							<execution>
								<id>copy</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<includeScope>runtime</includeScope>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>com.avereon</groupId>
						<artifactId>curex</artifactId>
						<version>${curex.version}</version>
						<executions>
							<execution>
								<id>patch-dependencies</id>
								<phase>package</phase>
								<goals>
									<goal>patch</goal>
								</goals>
								<configuration>
									<modulePath>${project.build.directory}/dependency</modulePath>
									<jars>
										<jar>
											<name>fft4j*.jar</name>
										</jar>
									</jars>
								</configuration>
							</execution>
						</executions>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>

</project>
